[package]
name = "sandbox-dynamodb"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.0"
aws-sdk-dynamodb = "1.39.0"
serde = "1.0.204"
serde_derive = "1.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "put"
path = "src/put.rs"

[[bin]]
name = "put_not_exists"
path = "src/put_not_exists.rs"

[[bin]]
name = "put_not_equals"
path = "src/put_not_equals.rs"

[[bin]]
name = "get"
path = "src/get.rs"
